base mode complete

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -16,10 +16,10 @@
         <div class="result">
           <span class="result-text"></span>
         </div>
-        <div class="inputs">
-          <input id="value1" type="text" placeholder="value 1">
-          <input id="value2" type="text" placeholder="value 2">
-        </div>
+        <form class="inputs">
+          <input class="value-input" id="value1" type="text" placeholder="value 1">
+          <input class="value-input" id="value2" type="text" placeholder="value 2">
+        </form>
         <div class="button operator" id="addition" data-operator="add">
           <span class="operator-symbol">+</span>
         </div>
