--- a/server/public/views/style.css
+++ b/server/public/views/style.css
@@ -1,3 +1,18 @@
+.calculator {
+  width: 320px;
+}
+
+.result {
+  width: 100%;
+  height: 50px;
+  margin: 5px;
+  border: solid black;
+}
+
+.result-text {
+  font-size: 20px;
+}
+
 .button {
   background-color: salmon;
   font-family: sans-serif;
