--- a/server/public/views/style.css
+++ b/server/public/views/style.css
@@ -1,35 +1,50 @@
+header {
+  font-family: 'Noto Sans', sans-serif;
+}
+
 .calculator {
-  width: 480px;
+  width: 425px;
+  height: auto;
 }
 
 .result {
   width: 100%;
   height: 50px;
   margin: 5px;
+  border-radius: 5px;
   border: solid black;
 }
 
+
 .result-text {
   font-size: 20px;
+  display: inline-block;
+  padding: 10px 5px;
+  float: right;
+  font-family: 'Maven Pro', sans-serif;
 }
 
 .button {
-  background-color: salmon;
+  background-color: darkgrey;
   font-family: sans-serif;
-  color: linen;
-  height: 150px;
-  width: 150px;
+  color: snow;
+  height: 75px;
+  width: 75px;
   margin: 5px;
+  border-radius: 5%;
   float: left;
   cursor: pointer;
 }
 
+
 .operator-symbol {
-  padding: 70px 70px;
-  margin: 0 auto;
   font-size: 40px;
+  display: inline-block;
+  padding: 15px 24px;
 }
 
 .operator-text {
-  font-size: 32px;
+  font-size: 20px;
+  display: inline-block;
+  padding: 25px 3px;
 }
