--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -14,8 +14,8 @@
   </header>
     <div class="container">
       <div class="calculator">
-        <div class="result" data-value="" data-result="" data-x="" data-y="" data-type="">
-          <span class="result-text"></span>
+        <div class="display-bar" data-currentInput="" data-result="" data-x="" data-y="" data-type="">
+          <span class="display-text"></span>
         </div>
         <div class="numbers">
           <div class="button number" id="nine" data-value="9">
