--- a/server/public/views/style.css
+++ b/server/public/views/style.css
@@ -5,18 +5,19 @@ header {
 .calculator {
   width: 425px;
   height: auto;
+  margin: 0 auto;
 }
 
-.result {
+.display-bar {
   width: 100%;
   height: 50px;
   margin: 5px;
   border-radius: 5px;
-  border: solid black;
+  border: solid lightgrey;
 }
 
 
-.result-text {
+.display-text {
   font-size: 20px;
   display: inline-block;
   padding: 10px 5px;
